contract-macro/tests/compile-fail/missing_feature_gate.stderr
error: Enable either 'contract' or 'data-driver' feature for WASM builds
 --> tests/compile-fail/../common/contract.rs
  |
  | #[contract]
  | ^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `contract` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unexpected `cfg` condition value: `contract`
 --> tests/compile-fail/../common/contract.rs
  |
  | #[contract]
  | ^^^^^^^^^^^
  |
  = note: no expected values for `feature`
  = note: using a cfg inside a attribute macro will use the cfgs from the destination crate and not the ones from the defining crate
  = help: try referring to `contract` crate for guidance on how handle this unexpected cfg
  = help: the attribute macro `contract` may come from an old version of the `dusk_forge_contract` crate, try updating your dependency with `cargo update -p dusk_forge_contract`
  = note: see <https://doc.rust-lang.org/nightly/rustc/check-cfg/cargo-specifics.html> for more information about checking conditional configuration
  = note: `#[warn(unexpected_cfgs)]` on by default
  = note: this warning originates in the attribute macro `contract` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unexpected `cfg` condition value: `data-driver`
 --> tests/compile-fail/../common/contract.rs
  |
  | #[contract]
  | ^^^^^^^^^^^
  |
  = note: no expected values for `feature`
  = note: using a cfg inside a attribute macro will use the cfgs from the destination crate and not the ones from the defining crate
  = help: try referring to `contract` crate for guidance on how handle this unexpected cfg
  = help: the attribute macro `contract` may come from an old version of the `dusk_forge_contract` crate, try updating your dependency with `cargo update -p dusk_forge_contract`
  = note: see <https://doc.rust-lang.org/nightly/rustc/check-cfg/cargo-specifics.html> for more information about checking conditional configuration
  = note: this warning originates in the attribute macro `contract` (in Nightly builds, run with -Z macro-backtrace for more info)
